changing photos to avatar image

--- a/_posts/2017-5-26-about_me.md
+++ b/_posts/2017-5-26-about_me.md
@@ -5,5 +5,5 @@ title: About me...
 
 My name is Santiago Moreira and I do some scientific programming, modelling and data anaylisis.
 
-![That's me!]({{ site.baseurl }}/images/mohr_log2.png)
+![That's me!](https://avatars3.githubusercontent.com/u/6890978?v=3&s=460)
 
