--- a/_posts/2017-5-26-about_me.md
+++ b/_posts/2017-5-26-about_me.md
@@ -6,6 +6,9 @@ title: Who I am...
 My name is Santiago Moreira and I do some scientific programming, modelling and data analysis.
 My fist computer was an Amstrad CPC 6128.
 
+[Click here if you want some more information about me](https://mohr-sm.github.io/about/ "About me")
+[Or click here if you want to check my last publications](https://mohr-sm.github.io/publications/ "Publications")
+
 ![That's me!](https://avatars3.githubusercontent.com/u/6890978?v=3&s=460)
 
 I am cinephile, I love science fiction, I am a whovian, I love Retrogaming and Music from the 70s,80s and 90s.  
