--- a/_posts/2017-5-26-about_me.md
+++ b/_posts/2017-5-26-about_me.md
@@ -10,7 +10,7 @@ title: Who I am...
 -----------------------------------------------------------------------------------
 
 My name is Santiago Moreira and I do some scientific programming, modelling and data analysis.
-My fist computer was an Amstrad CPC 6128.
+My first computer was an Amstrad CPC 6128.
 
 
 ![That's me!](https://avatars3.githubusercontent.com/u/6890978?v=3&s=460)
