--- a/_posts/2017-5-26-about_me.md
+++ b/_posts/2017-5-26-about_me.md
@@ -15,4 +15,4 @@ My first computer was an Amstrad CPC 6128.
 
 ![That's me!](https://avatars3.githubusercontent.com/u/6890978?v=3&s=460)
 
-I am cinephile, I love science fiction, I am a whovian, I love Retrogaming and Music from the 70s,80s and 90s.  
+I am a cinephile, I love science fiction, I am a whovian, I love Retrogaming and Music from the 70s,80s and 90s.  
