I have to write the post about dataviz :-(

--- a/_posts/2017-11-12-dataviz.md
+++ b/_posts/2017-11-12-dataviz.md
@@ -4,7 +4,8 @@ title:  Data Visualization using Open Source tools.
 ---
 
 
-*NEW POST COMING!!* 
+*NEW POST COMING!!*
+(Yeah, I know, it's May 2018 and nothing yet...)
 ― Santiago.
 
 
